--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -129,14 +129,14 @@ stages:
             parameters:
               ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
                 serviceConnection: $(devServiceConnection)
-                eapimEnvironmentName: 'Development'
+#                eapimEnvironmentName: 'Development'
               ${{ elseif eq(var.key, 'pr') }}:
                 serviceConnection: $(prodServiceConnection)
-                eapimEnvironmentName: 'Production'
+#                eapimEnvironmentName: 'Production'
               ${{ else }}:
                 serviceConnection: $(testServiceConnection)
                 ${{ if eq(var.key, 'pp') }}:
-                  eapimEnvironmentName: 'Oat'
+#                  eapimEnvironmentName: 'Oat'
                 ${{ elseif eq(var.key, 'test') }}:
                   eapimEnvironmentName: 'Test'
               environmentName: ${{var.key}}
