Tweaked ncs-b2c-dev to ncs-b2c-test

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -29,7 +29,7 @@ variables:
 - name: parsedDevExtensionAppId
   value: $[ replace(variables['devProxyIdentityAppClientId'],'-','') ]
 - group: ncs-b2c-global
-- group: ncs-b2c-dev
+- group: ncs-b2c-test
 
 stages:
 - stage: KeyVault
