--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -171,5 +171,6 @@ stages:
               environmentName: ${{var.key}}
               applicationName: ${{variables.applicationFullName}}
               releaseArtifactName: ${{variables.applicationFullName}}-$(Build.BuildId)-release
+              InfrDeploy: ${{parameters.InfrDeploy}}
 
     
