--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -133,7 +133,12 @@ stages:
                 serviceConnection: $(prodServiceConnection)
               ${{ else }}:
                 serviceConnection: $(testServiceConnection)
-              environmentName: ${{var.key}}
+              ${{ if eq(var.key, 'pp') }}:
+                environmentName: preprod
+              ${{ elseif eq(var.key, 'pr') }}:
+                environmentName: prod
+              ${{ else }}:
+                environmentName: ${{var.key}}
               applicationName: ${{variables.applicationShortName}}
           
           - template: pipeline/ncs-b2c/tenant-setup.yml@devopsTemplates
