--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -134,9 +134,14 @@ stages:
               ${{ else }}:
                 serviceConnection: $(testServiceConnection)
               ${{ if eq(var.key, 'pp') }}:
+                deployEnvironmentName: preprod
                 environmentName: preprod
+              ${{ elseif eq(var.key, 'pr') }}:
+                deployEnvironmentName: prod
+                environmentName: ${{var.key}}
               ${{ else }}:
                 environmentName: ${{var.key}}
+                deployEnvironmentName: ${{var.key}}
               applicationName: ${{variables.applicationShortName}}
           
           - template: pipeline/ncs-b2c/tenant-setup.yml@devopsTemplates
