--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -28,7 +28,7 @@ variables:
   value: $[ replace(variables['testProxyIdentityAppClientId'],'-','') ]
 - name: parsedDevExtensionAppId
   value: $[ replace(variables['devProxyIdentityAppClientId'],'-','') ]
-- group: ncs-b2c-prod
+- group: ncs-b2c-dev
 - group: ncs-b2c-global
 - name: environmentName
   value: pr
